# mpfx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_softfloat.sh  run_examples.sh
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  benchmark_add.cpp  benchmark_bit_float.cpp  benchmark_div.cpp  benchmark_mul_engines.cpp  benchmark_round.cpp  fp64_to_fp32.cpp  ops.cpp  round_p.cpp
cmake/: FindSoftFloat.cmake
examples/: CMakeLists.txt  benchmark_add.cpp  benchmark_add_engines.cpp  benchmark_div.cpp  benchmark_div_engines.cpp  benchmark_fma.cpp  benchmark_mul.cpp  benchmark_mul_engines.cpp  benchmark_sqrt.cpp  mixed_dot_prod.cpp  mx_dot_prod.cpp
include/: mpfx.hpp
include/mpfx/: arch.hpp  bit_float.hpp  context.hpp  context_efloat.hpp  context_ieee754.hpp  context_mp.hpp  context_mpb.hpp  context_mps.hpp  convert.hpp  engine.hpp  engine_eft.hpp  engine_ff.hpp  engine_fp.hpp  engine_fpe.hpp  engine_fx.hpp  engine_sf.hpp  flags.hpp  float.hpp  ops.hpp  params.hpp  real.hpp  round.hpp  round_opt.hpp  types.hpp  utils.hpp
patches/: universal-cmake-source-dir.patch
scripts/: benchmark.py
src/: context.cpp  context_ieee754.cpp  context_mpb.cpp  convert.cpp  engine.cpp  engine_ff.cpp  engine_sf.cpp  flags.cpp  ops.cpp  real.cpp  round.cpp  round_opt.cpp
tests/: CMakeLists.txt  test_bit_float.cpp  test_context.cpp  test_convert.cpp  test_eft.cpp  test_engine.cpp  test_flags.cpp  test_float.cpp  test_ops.cpp  test_real.cpp  test_round.cpp  test_round_opt.cpp
